Fix overflow text issue on narrow screens

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -32,20 +32,17 @@
   color: white;
 }
 
-@media (min-width: 480px) {
+@media (min-width: 800px) {
+  .img {
+    padding: 3%;
+    max-width: 500px;
+    max-height: 500px;
+  }
   .header {
     font-size: 3rem;
     padding: 1%;
   }
   .p {
     font-size: 2rem;
-  }
-}
-
-@media (min-width: 800px) {
-  .img {
-    padding: 3%;
-    max-width: 500px;
-    max-height: 500px;
   }
 }
