--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -4,7 +4,7 @@
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 
   display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@
 
   text-align: center;
   font-family: "Secular One", sans-serif;
-  font-size: 3rem;
+  font-size: 2.5rem;
   background-color: transparent;
   color: white;
 }
@@ -25,7 +25,7 @@
   margin: 0 10%;
   padding: 5% 0;
   font-family: "Secular One", sans-serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: white;
 }
 
@@ -34,6 +34,12 @@
 }
 
 @media (min-width: 800px) {
+  .header {
+    font-size: 3rem;
+  }
+  .p {
+    font-size: 2rem;
+  }
   .welcome {
     background-size: cover;
     background-position: top;
